After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740374 - Is enum GtkCssProviderError really deprecated?
Is enum GtkCssProviderError really deprecated?
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Class: GtkStyleContext
3.15.x
Other All
: Normal minor
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-11-19 15:04 UTC by Kjell Ahlstedt
Modified: 2014-11-26 03:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
docs: Fix annotation for GtkCssProviderError (1.11 KB, patch)
2014-11-19 15:53 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review

Description Kjell Ahlstedt 2014-11-19 15:04:39 UTC
The description of enum GtkCssProviderError says "Deprecated." Is that true?
The description was added 2014-01-21 by William Jon McCann,
https://git.gnome.org/browse/gtk+/commit/?id=b28f04d6e9ef262ea0f399bfd9b082adbe976fff

This enum is still used in gtkcssparser.c and gtkcssprovider.c. Such error
codes can be returned by gtk_css_provider_load_from_file() and other functions.
They can also be given to GtkCssProvider::parsing-error handlers.

I ask because I've noticed that GtkCssProviderError has not been wrapped in
gtkmm. Now I'm wondering whether I should wrap it. If it's not deprecated,
definitely. If it's being phased out of gtk+, probably not.
Comment 1 Emmanuele Bassi (:ebassi) 2014-11-19 15:49:41 UTC
no, it's no deprecated — probably just a copy and paste typo that survived code review.
Comment 2 Emmanuele Bassi (:ebassi) 2014-11-19 15:53:00 UTC
Created attachment 291009 [details] [review]
docs: Fix annotation for GtkCssProviderError
Comment 3 Matthias Clasen 2014-11-25 13:04:37 UTC
Review of attachment 291009 [details] [review]:

ok
Comment 4 Matthias Clasen 2014-11-26 03:15:50 UTC
Attachment 291009 [details] pushed as 605f2ef - docs: Fix annotation for GtkCssProviderError