docs: Fix annotation for GtkCssProviderError

https://bugzilla.gnome.org/show_bug.cgi?id=740374